<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <color name="blue">#3b5999</color>
    <color name="red">#dd4b39</color>
    <color name="green">#2f7a6f</color>
    <color name="white">#ffffff</color>
    <color name="yellow">#eee599</color>
    <color name="black">#000000</color>
    <color name="card_white">#ffffffff</color>
    <color name="card_shadow">#d7d7d7</color>
    <color name="side_menu_bg">#f5f5f5</color>
    <color name="side_menu_divider">#cfcfcf</color>
    <color name="side_menu_text">#313131</color>
    <color name="gray">#e6e7e2</color>
    <color name="dark_gray">#808080</color>
    <color name="semi_transparent_white">#20FFFFFF</color>
    
    <string name="app_name">Reflect</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="log_in_facebook">Log In with Facebook</string>
    <string name="log_in_google">Log In with Google</string>
    <string name="content_community_photo">Community Photo</string>
    <string name="content_moment_photo">Moment Photo</string>
    <string name="content_photo">Photo</string>
    <string name="desc_log_in">LOG IN</string>
    <string name="desc_network">NETWORK</string>
    <string name="desc_community">COMMUNITY</string>
    <string name="desc_moment">MOMENT</string>
    <string name="name_community">COMMUNITY</string>
    <string name="name_moment">MOMENT</string>
    <string name="name_photo">PHOTO</string>
    <string name="title_activity_network">My Communities</string>
    <string name="title_activity_community">CommunityActivity</string>
    <string name="title_activity_moment">MomentActivity</string>
    <string name="title_dialog_community_filter">Filter Connections</string>
    <string name="title_activity_tag">Tag</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_apply">Apply</string>
    <string name="logo">Reflect Logo</string>
    <string name="welcome_to_reflect">WELCOME TO REFLECT!</string>
    <string name="or">OR</string>
    <string name="app_id">793031714062790</string>
    <string name="error_internet_connection">Something wrong with your internet connection. Please check and retry.</string>
    <string name="error_title">Error</string>
    <string name="action_add_community">Add Community</string>
    <string name="community_image">Community image</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="community_menu">Community menu</string>
    <string name="photo_preview">Photo preview</string>
    <string name="action_add_photo">Add photo</string>
    <string name="moment_photo">Moment photo</string>
    <string name="action_add_moment">Add moment</string>
    <string name="action_filter_moments">Filter moments</string>
    <string name="action_take_photo">Take photo</string>
    <string name="add_photo">Add photo</string>
    <string name="community_name">Community name</string>
    <string name="moment_name">Moment name</string>
    <string name="moment_date">Moment date</string>
    <string name="number_of_photos">Number of photos</string>
    <string name="people_icon">People icon</string>
    <string name="people_names">People names</string>
    <string name="photo">Photo</string>
    <string name="when_was_this">WHEN WAS THIS?</string>
    <string name="whos_here">WHO\'S HERE?</string>
    <string name="add_story">Add story</string>
    <string name="add_sound">Add sound</string>
    <string name="add_tag">Add tag</string>
    <string name="add_detail">Add detail</string>
    <string name="detail_card">Detail card</string>
    <string name="memory_icon">Memory icon</string>
    <string name="memory_menu">Memory menu</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="new_community">New Community</string>
    <string name="new_moment">New Moment</string>
    <string name="background">Background</string>

    <string name="title_photo_gallery">Select Photos</string>
    <string name="done">DONE</string>

    <string name="add">ADD</string>
    <string name="add_new_story">Add New Story</string>
    <string name="log_in_with_reflect">Log In with Reflect</string>
    <string name="add_new_detail">Add New Detail</string>
    <string name="take_photo">Take photo</string>
    <string name="checkbox">Checkbox</string>
    <string name="add_new_community">Add New Community</string>
    <string name="add_new_moment">Add New Moment</string>
    <string name="add_photos">ADD PHOTOS</string>
    <string name="action_invite_to_community">Invite</string>
    <string name="action_add_tag">Add Tag</string>
    <string name="action_delete_tag">Delete Tag</string>
    <string name="action_edit_tag">Edit Tag</string>
    <string name="how">How?</string>
    <string name="action_delete_memory">Delete Memory</string>
    <string name="action_edit_memory">Edit Memory</string>
    <string name="action_speech_to_text">Speech To Text</string>
    <string name="title">Title</string>
    <string name="add_new_sound">Recording</string>
    <string name="record_audio">Record Audio</string>
    <string name="zero_time">00:00:00</string>
    <string name="press_to_start">Press to start</string>
    <string name="tag_name">Tag Name</string>
    <string name="new_tag">New Tag</string>
    <string name="action_delete_photo">Delete Photo</string>
    <string name="edit_community">Edit Community</string>
    <string name="action_edit_community">Edit Community</string>
    <string name="action_edit_moment">Edit Moment</string>
    <string name="action_delete_moment">Delete Moment</string>
    <string name="no_tags">No tags</string>
    <string name="no_photos">There are no photos in this moment. Add some!</string>
    <string name="campaign_option_1">Campaign Option 1</string>
    <string name="date_donation">10-20 
        July 2014</string>
    <string name="dollar_amount">$0</string>
    <string name="dance">Support Movement Dance Troupe \n By Participating</string>
    <string name="donate">donate</string>
    <string name="new_campaign">NEW FUNDRAISING CAMPAIGN</string>
    <string name="imageBitmap">imageBitmap</string>
    <string name="fundraising">Yes, the annual fundraising event is back! \n Show us some LOVE.let the legacy last.</string>
    <string name="tuned">We are also planning to have a party in \n Septemeber.Stay Tuned !</string>
    <string name="contributor">Top 5 Contributors</string>
    <string name="divider">______________________________________________</string>
    <string name="Ellen">Ellen Reflect</string>
    <string name="david">David Palmer"</string>
    <string name="josh">Josh Hartnet</string>
    <string name="alex">Alexander"</string>
    <string name="amount_2">$2000</string>
</resources>