<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_add_photo"
        android:icon="@drawable/add_photo"
        android:showAsAction="always"
        android:title="@string/action_add_photo"/>
    <item
        android:id="@+id/action_delete_photo"
        android:showAsAction="never"
        android:title="@string/action_delete_photo"/>
    <item
        android:id="@+id/action_edit_tag"
        android:showAsAction="never"
        android:title="@string/action_edit_tag"
        android:visible="false"/>
    <item
        android:id="@+id/action_delete_tag"
        android:showAsAction="never"
        android:title="@string/action_delete_tag"
        android:visible="false"/>
    <item
        android:id="@+id/action_done_add"
        android:showAsAction="always"
        android:title="@string/done"
        android:visible="false"/>
    <item
        android:id="@+id/action_done_edit"
        android:showAsAction="always"
        android:title="@string/done"
        android:visible="false"/>
    
</menu>