<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="124dp"
        android:layout_height="126dp"
        android:contentDescription="@string/title_photo_gallery" />

    <ImageView
        android:id="@+id/checkBox"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/checkbox_selected"
        android:contentDescription="@string/checkbox" 
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/border"
        android:layout_width="124dp"
        android:layout_height="126dp"
        android:src="@drawable/checkbox_bg"
        android:contentDescription="@string/background"
        android:visibility="gone" />

</RelativeLayout>