<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".activity.PhotoActivity" >

    <Button
        android:id="@+id/add_tag"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/plus_green"
        android:paddingLeft="135dp"
        android:paddingRight="135dp"
        android:text="@string/new_tag"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/tag_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_tag"
        android:background="@color/white"
        android:visibility="gone" >

        <EditText
            android:id="@+id/tag_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:hint="@string/tag_name"
            android:padding="11dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/photo_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tag_name_container"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="8dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/when"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/when_was_this"
                android:textColor="@color/green"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/who"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whos_here"
                android:textColor="@color/green"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/when_was_this"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_tags"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/green"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/button_photo_tag"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/toggle_backgroung"
            android:contentDescription="@string/add_tag"
            android:drawableTop="@drawable/tag"
            android:padding="8dp"
            android:textOff=""
            android:textOn=""
            android:textSize="0sp" />

        <ImageButton
            android:id="@+id/add_sound"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/add_sound"
            android:padding="8dp"
            android:src="@drawable/sound" />

        <ImageButton
            android:id="@+id/add_detail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/add_detail"
            android:padding="8dp"
            android:src="@drawable/detail" />

        <ImageButton
            android:id="@+id/add_story"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/add_story"
            android:padding="8dp"
            android:src="@drawable/story" />
    </LinearLayout>

    <com.reflectmobile.view.CustomScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tab_view"
        android:layout_below="@id/photo_description" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.reflectmobile.view.CustomViewPager
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:background="@drawable/border_community_card_photo"
                android:paddingBottom="1dp"
                android:paddingTop="1dp" />

            <TextView
                android:id="@+id/instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                android:background="@color/gray"
                android:gravity="center"
                android:textColor="@color/black"
                android:visibility="gone" />

            <TextView
                android:id="@+id/memories_caption"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:gravity="center"
                android:textColor="@color/green" />

            <LinearLayout
                android:id="@+id/memories_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>
    </com.reflectmobile.view.CustomScrollView>

</RelativeLayout>